--- a/myGoals/src/app/home/home.component.html
+++ b/myGoals/src/app/home/home.component.html
@@ -5,3 +5,5 @@
 <p>{{propertyGoal.small}}</p>
 <p>{{propertyGoal.big}}</p>
 <p>{{propertyGoal.color}}</p>
+
+<button (click)="fireTheCustomEvent($event)" >Click me !</button>
