--- a/myGoals/src/app/home/home.component.html
+++ b/myGoals/src/app/home/home.component.html
@@ -2,8 +2,12 @@
   {{homeTitle}}
 </p>
 
-<p>{{propertyGoal.small}}</p>
+<!-- <p>{{propertyGoal.small}}</p>
 <p>{{propertyGoal.big}}</p>
 <p>{{propertyGoal.color}}</p>
 
-<button (click)="fireTheCustomEvent($event)" >Click me !</button>
+<button (click)="fireTheCustomEvent($event)" >Click me !</button> -->
+
+<div class="container">
+  <h2>Home Page</h2>
+</div>
