--- a/myGoals/public/style.css
+++ b/myGoals/public/style.css
@@ -1,15 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* h2, h3 {
-  color: #555;
-  font-family: sans-serif;
-}
-
-.container {
-  border: 1px solid #AAA;
-  padding: 30px;
-} */
-
 body{
   font-family: verdana;
   letter-spacing: 0.1em;
@@ -25,7 +13,7 @@ h1,h2,h3{
 
 h1{
   text-indent: -10000px;
-  background: url(../public/logo.jpg) no-repeat center bottom;
+  background: url(logo.jpg) no-repeat center bottom;
   background-size: 100%;
   width: 140px;
   height: 100px;
