--- a/myGoals/src/app/home/home.component.html
+++ b/myGoals/src/app/home/home.component.html
@@ -1,13 +1,6 @@
-<p>
-  {{homeTitle}}
-</p>
 
-<!-- <p>{{propertyGoal.small}}</p>
-<p>{{propertyGoal.big}}</p>
-<p>{{propertyGoal.color}}</p>
-
-<button (click)="fireTheCustomEvent($event)" >Click me !</button> -->
 
 <div class="container">
+  <h2>{{homeTitle}}</h2>
   <h2>Home Page</h2>
 </div>
