--- a/myGoals/src/styles.css
+++ b/myGoals/src/styles.css
@@ -3,12 +3,15 @@
 /* h2, h3 {
   color: #555;
   font-family: sans-serif;
-}
+} */
 
-.container {
+.search div{
   border: 1px solid #AAA;
   padding: 30px;
-} */
+  display: block;
+  border-radius: 2px;
+}
+
 h6{
   text-align: center;
 }
@@ -31,7 +34,7 @@ h1{
   background: url(../public/logo.jpg) no-repeat center bottom;
   background-size: 100%;
   width: 140px;
-  height: 100px;
+  height: 140px;
   margin: 0 auto;
 }
 
