Added a simple service

--- a/myGoals/src/app/home/home.component.html
+++ b/myGoals/src/app/home/home.component.html
@@ -3,4 +3,14 @@
 <div class="container">
   <h2>{{homeTitle}}</h2>
   <h2>Home Page</h2>
+
+  <button (click)="logging()">Click me!!</button>
+
+  <!-- <p>
+    First Usser: {{user}}
+  </p> -->
+  <p>
+    Array Usser: {{logger.users}}
+  </p>
+
 </div>
