Added some basic css and bootstrap

--- a/myGoals/src/app/app.component.html
+++ b/myGoals/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
-  <h1>{{title}}</h1>
-  <h6>{{motivation}}</h6>
+  <h1>{{title}}</h1><br><br>
+  <h6>{{motivation}}</h6><br><br>
   <nav>
     <ul>
       <!-- Very slow approach, reload every times, use routerLink from angular -->
@@ -12,6 +12,7 @@
 
     </ul>
   </nav>
+  
 </header>
 <section id="main">
 
