--- a/myGoals/src/app/home/home.component.html
+++ b/myGoals/src/app/home/home.component.html
@@ -4,14 +4,14 @@
   <h2>{{homeTitle}}</h2>
   <h2>Home Page</h2>
 
-  <button (click)="logging()">Click me!!</button>
+  <!-- <button (click)="logging()">Click me!!</button> -->
 
   <!-- <p>
     First Usser: {{user}}
   </p> -->
-  <p>
+  <!-- <p>
     Array Usser: {{logger.users}}
-  </p>
+  </p> -->
 
 
 </div>
